--- a/src/globals.css
+++ b/src/globals.css
@@ -10,7 +10,7 @@
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
  
-    --popover: 0 0% 100%;
+    --popover: 0 0% 100% /1;
     --popover-foreground: 222.2 47.4% 11.2%;
  
     --border: 214.3 31.8% 91.4%;
